created inbound body fields

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <button id="form-button" class="tab active" onclick="clickTab(event, '#form-wrapper')">Form</button>
           <button id="html-button" class="tab" onclick="clickTab(event, '#html-wrapper')">HTML</button>
           <button id="submit-button" class="tab" onclick="clickTab(event, '#submit-wrapper')">Submit File</button>
+          <button class="tab" onclick="clickTab(event, '#inbound-wrapper')"> Inbound</button>
         </div>
         <section id="form-wrapper" class="content visible">
             <div id="form"></div>
@@ -25,6 +26,9 @@
         </section>
         <section id="submit-wrapper" class="content">
             <div id="submit-output" class="copy"></div>
+        </section>
+                <section id="inbound-wrapper" class="content">
+            <div id="inbound-output" class="copy"></div>
         </section>
     </section>
     <section class="right">
